--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -140,7 +140,7 @@
   <string name="settings_widgets_widget4x1_data_title">Udvidet data</string>
   <string name="settings_widgets_widget4x1_transparent_sum">System baggrund hvis ikke afkrydset</string>
   <string name="settings_widgets_widget4x1_transparent_title">Gennemsigtig baggrund</string>
-  <string name="settings_widgets_widget4x2">Widget 4x2</string>
+  <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
   <string name="settings_widgets_widget4x2_city_font_summary">Standard størrelse 22sp</string>
   <string name="settings_widgets_widget4x2_city_font_title">By</string>
   <string name="settings_widgets_widget4x2_clock_font_summary">Standard størrelse 50sp</string>
