--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -143,7 +143,7 @@
     <string name="settings_widgets_widget4x1_data_title">Rozšírené dáta</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Odznačte pre predvolené pozadie</string>
     <string name="settings_widgets_widget4x1_transparent_title">Priehľadné pozadie</string>
-    <string name="settings_widgets_widget4x2">Widget 4x2</string>
+    <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Predvolená hodnota 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Mesto</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Predvolená hodnota 50sp</string>
