(Hopefuly) last cosmetics

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -8,18 +8,18 @@
     <string name="about_blizzard">Schneesturm</string>
     <string name="about_cloudy">Wolkig</string>
     <string name="about_cloudy_night">Wolkige Nacht</string>
-    <string name="about_dust">Staub</string>
+    <string name="about_dust">Smog</string>
     <string name="about_fog">Nebel</string>
     <string name="about_for_translators">Für Übersetzer:</string>
     <string name="about_for_translators_text">Wenn Du helfen willst die App in Deine Sprache zu übersetzen, gehe einfach auf meine GitHub-Seite (verwende den Button oben) um alle Quellen zu sehen.</string>              
     <string name="about_hailstone">Hagel</string>
     <string name="about_heavy_snow">Schneegestöber</string>    
     <string name="about_light_rain">Nieseln</string>
-    <string name="about_light_snow">Rieseln</string>
+    <string name="about_light_snow">Leichter Schneefall</string>
     <string name="about_overcast">Bedeckt</string>
     <string name="about_rain">Regen</string>
     <string name="about_rainstorm">Regensturm</string>
-    <string name="about_showers">Regengüsse</string>
+    <string name="about_showers">Regenschauer</string>
     <string name="about_sleet">Graupelschauer</string>
     <string name="about_snow">Schnee</string>
     <string name="about_social">Soziale Verbindungen:</string>
@@ -82,7 +82,7 @@
     <string name="network_error">Verbindung mit dem Server fehlgeschlagen</string>
     <string name="no_provider">Positionierung gescheitert\nWähle den Ort selbst aus</string>
     <string name="ok">OK</string>
-    <string name="press_color_to_apply">Zum Anwenden Farbe berühren</string> 
+    <string name="press_color_to_apply">Zum Anwenden die Farbe berühren</string> 
     <string name="pressure_units">Druckeinheit</string> 
     <string name="pressure_units_mb">" hPa"</string>
     <string name="pressure_units_mmhg">" mmHg"</string>
@@ -111,7 +111,7 @@
     <string name="settings_category_update">Aktualisierungseinstellungen</string>
     <string name="settings_category_update_sum">Einstellungen für automatisches Aktualisieren und Intervalle</string>
     <string name="settings_category_widgets">Widget-Einstellungen</string>
-    <string name="settings_category_widgets_sum">Widget-Darstellung und --Aktionen</string>
+    <string name="settings_category_widgets_sum">Widget-Darstellung und Widget-Aktionen</string>
     <string name="settings_click_actions">Berührungseinstellungen</string>
     <string name="settings_check_updates_summary">Prüfe auf Aktualisierung beim Anwendungsstart</string>    
     <string name="settings_check_updates_title">Prüfe auf Aktualisierung</string>
@@ -121,7 +121,7 @@
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>    
     <string name="settings_notification_color_title">Benachrichtigungssymbolfarbe</string>
     <string name="settings_notification_summary">Zeige aktuelle Wetterbedingungen im Benachrichtigungsbereich</string>
-    <string name="settings_notification_text_color_summary">Benachrichtigungstext- und -symbolfarbe</string>
+    <string name="settings_notification_text_color_summary">Benachrichtigungstext- und \u2011symbolfarbe</string>
     <string name="settings_notification_title">Zeige Benachrichtigung</string>
     <string name="settings_notification_type">Art der Benachrichtigung</string>
     <string name="settings_show_info_summary">Zeige oder verstecke Anzeigeelemente</string>
@@ -138,7 +138,7 @@
     <string name="settings_update_wifi_only_title">Aktualisiere nur mit WLAN</string>
     <string name="settings_widgets_click_clock_summary">App die gestartet wird, wenn die Uhr am Widget berührt wird</string>
     <string name="settings_widgets_click_clock_title">Berühren der Uhr</string>
-    <string name="settings_widgets_click_weather_summary">App die gestartet wird, wenn die Wettervorhersage am Widget berührt wird (Temperatur)</string>
+    <string name="settings_widgets_click_weather_summary">App die gestartet wird, wenn die Wettervorhersage (Temperatur) am Widget berührt wird</string>
     <string name="settings_widgets_click_weather_title">Berühren der Wettervorhersage</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Detailierte Daten</string>    
@@ -150,7 +150,7 @@
     <string name="settings_widgets_widget4x2_clock_font_summary">Standardeinstellung 50sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Uhr</string>
     <string name="settings_widgets_widget4x2_custom_font_summary">Schriftgrößen für Widget anpassen</string>
-    <string name="settings_widgets_widget4x2_custom_font_title">Angepasste Schriftgrößen</string>
+    <string name="settings_widgets_widget4x2_custom_font_title">Eigene Schriftgrößen</string>
     <string name="settings_widgets_widget4x2_date_font_summary">Standardeinstellung 14sp</string>
     <string name="settings_widgets_widget4x2_date_font_title">Datum</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">Standardeinstellung 22sp</string>
@@ -170,11 +170,11 @@
     <string name="visibility_units">Längeneinheit</string>
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
-    <string name="visibility_units_mi">" meilen"</string>
+    <string name="visibility_units_mi">" mi"</string>
     <string name="weather_cond_cloudy">Wolkig</string>
     <string name="weather_cond_fog">Nebel</string>
     <string name="weather_cond_chancerain">Regenwahrscheinlichkeit</string>
-    <string name="weather_cond_lightsnow">Rieseln</string>
+    <string name="weather_cond_lightsnow">Leichter Schneefall</string>
     <string name="weather_cond_overcast">Bedeckt</string>
     <string name="weather_cond_rain">Regen</string>
     <string name="weather_cond_rainstorm">Regensturm</string>
